test: Roda os testes de TPS do jdempotent via virtual threads (Story 3.19)
Troca Executors.newFixedThreadPool(20) por
Executors.newVirtualThreadPerTaskExecutor() nos 2 testes de TPS
informativo (wiring manual e via contexto Spring). Java 25 ja suporta
virtual threads de forma estavel; sem mudanca de escopo alem do
executor (mesmos 500 ops, mesmas chaves distintas, mesmo timeout).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Pd2vACWnzQsnKCPfDhY5ZG